# Advanced-Algorithms

./: Assembly_Line_Naive.cpp  DP_CoinRowProblem.c  Matrix_Paranthesis_Optimization_NaiveMethod.cpp  shell_code_ish.c
Assignment 3/: a.out  main.c
Assignment 3/suffix_array-master/: .gitignore  CMakeLists.txt  README.md  a.out  main.cpp  suffix_array.h
Assignment 4/: analysis.py  miller.py  test_cases.py
Assignment2/: my.cpp
Assignment2/include/: survival_of_the_fittest.hpp
Assignment2/src/: the_messenger_implementation.cpp
Assignment2/test/: a.out
Assignment_1/: a.out  dynamic.cpp  main.cpp
Assignment_1/include/: splay_tree.hpp
Assignment_1/src/: dynamic_array_implementation.cpp  mith.cpp  mith_new.cpp  mith_new_new.cpp  splay_tree_implementation.cpp
Assignment_1/test/: a.out  sanity_array.cpp  sanity_tree.cpp
Assignment_2/: a.out  main.cpp
Assignment_2/src/: survival_of_the_fittest_implementation.cpp
CODES/: firstfit_allocation.py  min_cost.py  min_travel_cost.cpp
